Fixes for new OHM: change slider in new ohm too close to text missing last column data wrong id in export some product names coming through as string "NULL" back to old icons

--- a/css/ohm/ie7.css
+++ b/css/ohm/ie7.css
@@ -3,6 +3,9 @@
 td,td a{
 	line-height:10px;
 }
+td a{
+	padding:0 20px 0 20px;
+}
 .view .hmcmenu,.export .hmcmenu{
 	display:block;
 }
